--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,4 +3,4 @@
 #
 # Name of the directory to which to generate the documentation.
 #
-hm_util_inspector__docs_dir: vault/docs
+hm_util_inspector__docs_dir: inventory/docs
