--- a/tasks/_func.inspect_user.yml
+++ b/tasks/_func.inspect_user.yml
@@ -2,10 +2,10 @@
 - name: Generating user detail documentation pages
   template:
     src: "{{ item }}"
-    dest: "{{ playbook_dir }}/vault/docs/users_detail_{{ ivar_userid }}.rst"
+    dest: "{{ playbook_dir }}/{{ hm_util_inspector__docs_dir }}/users/detail_{{ ivar_userid }}.rst"
     mode: 0644
   with_first_found:
-    - "group_files/servers/users_detail.rst.j2"
+    - "inventory/group_files/servers/users_detail.rst.j2"
     - "{{ role_path }}/templates/users_detail.rst.j2"
   run_once: true
   delegate_to: localhost
